@@ -27,7 +27,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
+import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -53,7 +53,7 @@ public class LegacyCategoryControllerTest extends UnitTestBase
                                                    VirtualHostNode.TYPE,
                                                    new String[]{BrokerController.TYPE},
                                                    null,
-                                                   Collections.emptySet());
+                                                   Set.of());
     }
 
 
